--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@tanstack/react-router": "^1.114.29",
 		"@tanstack/react-start": "^1.114.31",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.486.0",
 		"motion": "^12.6.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
@@ -29,6 +30,7 @@
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
+		"babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
 		"typescript": "^5.8.2",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
