--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
 		"@tailwindcss/vite": "^4.0.17",
 		"@tanstack/react-router": "^1.114.29",
 		"@tanstack/react-start": "^1.114.31",
+		"add": "^2.0.6",
 		"clsx": "^2.1.1",
 		"motion": "^12.6.2",
 		"react": "^19.1.0",
+		"react-aria-components": "^1.7.1",
 		"react-dom": "^19.1.0",
+		"react-stately": "^3.36.1",
 		"tailwind-merge": "^3.1.0",
 		"tailwindcss": "^4.0.17",
+		"tailwindcss-react-aria-components": "^2.0.0",
 		"vinxi": "^0.5.3"
 	},
 	"devDependencies": {
