--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@content-collections/core": "^0.8.2",
 		"@content-collections/vinxi": "^0.1.0",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tanstack/react-router-devtools": "^1.116.0",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
