Update deps and push to main

--- a/package.json
+++ b/package.json
@@ -7,40 +7,42 @@
 	"license": "ISC",
 	"type": "module",
 	"scripts": {
-		"dev": "vinxi dev",
-		"build": "content-collections build && vinxi build",
-		"start": "vinxi start"
+		"dev": "vite dev",
+		"build": "content-collections build && vite build",
+		"start": "vite start"
 	},
 	"description": "",
 	"dependencies": {
 		"@content-collections/mdx": "^0.2.2",
-		"@headlessui/react": "^2.2.1",
-		"@tailwindcss/vite": "^4.1.2",
-		"@tanstack/react-router": "^1.114.29",
-		"@tanstack/react-start": "^1.114.31",
+		"@headlessui/react": "^2.2.4",
+		"@tailwindcss/vite": "^4.1.10",
+		"@tanstack/react-router": "^1.121.34",
+		"@tanstack/react-start": "^1.121.35",
 		"add": "^2.0.6",
 		"clsx": "^2.1.1",
-		"motion": "^12.6.2",
+		"echarts": "^5.6.0",
+		"echarts-for-react": "^3.0.2",
+		"motion": "^12.19.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"tailwind-merge": "^3.1.0",
-		"tailwindcss": "^4.1.2",
-		"vinxi": "^0.5.3"
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.10",
+		"vite": "^7.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@content-collections/cli": "^0.1.6",
 		"@content-collections/core": "^0.8.2",
-		"@content-collections/vinxi": "^0.1.0",
+		"@content-collections/vinxi": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.16",
-		"@tanstack/react-router-devtools": "^1.116.0",
-		"@types/node": "^22.15.17",
-		"@types/react": "^19.0.12",
-		"@types/react-dom": "^19.0.4",
-		"@vitejs/plugin-react": "^4.3.4",
-		"babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
-		"concurrently": "^9.1.2",
-		"typescript": "^5.8.2",
+		"@tanstack/react-router-devtools": "^1.121.34",
+		"@types/node": "^22.15.33",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"@vitejs/plugin-react": "^4.6.0",
+		"babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+		"concurrently": "^9.2.0",
+		"typescript": "^5.8.3",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
