--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@tailwindcss/vite": "^4.1.10",
 		"@tanstack/react-router": "^1.121.34",
 		"@tanstack/react-start": "^1.121.35",
+		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0",
 		"add": "^2.0.6",
 		"clsx": "^2.1.1",
 		"echarts": "^5.6.0",
