--- a/biome.json
+++ b/biome.json
@@ -1,20 +1,16 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
 		"useIgnoreFile": true
 	},
 	"files": {
-		"ignoreUnknown": false,
-		"ignore": []
+		"ignoreUnknown": false
 	},
 	"formatter": {
 		"enabled": true,
 		"indentStyle": "tab"
-	},
-	"organizeImports": {
-		"enabled": true
 	},
 	"linter": {
 		"enabled": true,
@@ -29,6 +25,12 @@
 						"functions": ["cn"]
 					}
 				}
+			},
+			"style": {
+				"noRestrictedImports": "error"
+			},
+			"correctness": {
+				"noUnusedImports": { "level": "error", "fix": "safe" }
 			}
 		}
 	},
