--- a/package.json
+++ b/package.json
@@ -1,51 +1,50 @@
 {
-	"name": "daniel-noworyta-website",
-	"version": "1.0.0",
-	"main": "index.js",
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "content-collections build && vite build",
-		"start": "vite start",
-		"lint": "biome format ."
-	},
-	"description": "",
-	"dependencies": {
-		"@content-collections/mdx": "^0.2.2",
-		"@headlessui/react": "^2.2.4",
-		"@tailwindcss/vite": "^4.1.10",
-		"@tanstack/react-router": "^1.121.34",
-		"@tanstack/react-start": "^1.121.35",
-		"@vercel/analytics": "^1.5.0",
-		"@vercel/speed-insights": "^1.2.0",
-		"add": "^2.0.6",
-		"clsx": "^2.1.1",
-		"echarts": "^5.6.0",
-		"echarts-for-react": "^3.0.2",
-		"motion": "^12.19.1",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwind-merge": "^3.3.1",
-		"tailwindcss": "^4.1.10",
-		"vite": "^7.0.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.0.0",
-		"@content-collections/cli": "^0.1.6",
-		"@content-collections/core": "^0.8.2",
-		"@content-collections/vinxi": "^0.1.1",
-		"@tailwindcss/typography": "^0.5.16",
-		"@tanstack/react-router-devtools": "^1.121.34",
-		"@types/node": "^22.15.33",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
-		"@vitejs/plugin-react": "^4.6.0",
-		"babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-		"concurrently": "^9.2.0",
-		"typescript": "^5.8.3",
-		"vite-tsconfig-paths": "^5.1.4"
-	}
+  "name": "daniel-noworyta-website",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "content-collections build && vite build",
+    "start": "vite start",
+    "lint": "biome lint --write",
+    "format": "biome format . --write"
+  },
+  "description": "",
+  "dependencies": {
+    "@content-collections/mdx": "^0.2.2",
+    "@headlessui/react": "^2.2.4",
+    "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-router": "^1.121.34",
+    "@tanstack/react-start": "^1.121.35",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "add": "^2.0.6",
+    "clsx": "^2.1.1",
+    "motion": "^12.19.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10",
+    "vite": "^7.0.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.0.0",
+    "@content-collections/cli": "^0.1.6",
+    "@content-collections/core": "^0.8.2",
+    "@content-collections/vinxi": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-router-devtools": "^1.121.34",
+    "@types/node": "^22.15.33",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "concurrently": "^9.2.0",
+    "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4"
+  }
 }
