--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"content-collections watch\" \"vite dev\"",
+    "dev": "concurrently \"content-collections watch\" \"vite dev --host\"",
     "build": "content-collections build && vite build",
     "start": "vite start",
     "lint": "biome lint --write",
